<resources>
    <string name="app_name">Data Warga RT04</string>
    <string name="action_settings">Settings</string>
    <string name="nama_logo">DATA WARGA RT 04</string>
    <string name="nama_data">Berikut Daftar Data Warga RT 04 </string>
    <string name="nama_databikin">Silahkan isi data warga </string>
    <string name="nama_datalihat">Silahkan lihat data warga</string>
    <string name="nama_dataupdate">Silahkan ubah data warga</string>
    <string name="btn_simpan">Simpan</string>
    <string name="btn_ubah">Ubah</string>

    <string name="info_nomor_nik">Nomor KTP/NIK</string>
    <string name="info_namalengkap">Nama Lengkap</string>
    <string name="info_jeniskelamin">Jenis Kelamin</string>
    <string name="info_tempatlahir">Tempat Lahir</string>
    <string name="info_tanggallahir">Tanggal Lahir</string>
    <string name="info_alamat">Alamat Lengkap</string>
    <string name="info_agama">Agama</string>
    <string name="info_pendidikan">Pendidikan</string>
    <string name="info_pekerjaan">Pekerjaan</string>
    <string name="info_status">Status Pernikahan</string>
    <string name="btn_batal">Batal</string>

</resources>
